Fix logo stretching on Safari

--- a/src/assets/stylesheets/link.scss
+++ b/src/assets/stylesheets/link.scss
@@ -46,6 +46,7 @@ a {
   width: 100%;
   display: flex;
   justify-content: center;
+  align-items: center;
   margin-top: 24px;
 
   img {
